# opengl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
assets/shaders/: example.vert
core/: CMakeLists.txt
core/include/: core.h  utils.h
core/include/glcore/core/: application.hh  core.hh  deltatime.hh  imgui_layer.hh  input.hh  key_codes.hh  layer.hh  layer_stack.hh  log.hh  mouse_button_codes.hh  window.hh
core/include/glcore/events/: application_event.hh  event.hh  key_event.hh  mouse_event.hh
core/include/glcore/utils/: opengl_debug.hh  orthographic_camera.hh  orthographic_camera_controller.hh  shader.hh
core/include/platform/windows/: windows_input.hh  windows_window.hh
core/src/glcore/core/: application.cc  imgui_build.cc  imgui_layer.cc  layer_stack.cc  log.cc
core/src/glcore/util/: openg_debug.cc  orthographic_camera.cc  orthographic_camera_controller.cc  shader.cc
core/src/platform/windows/: windows_input.cc  windows_window.cc
examples/include/: hello_triangle.hh
examples/src/: hello_triangle.cc
ext/: CMakeLists.txt
ext/glad/include/glad/: gl.h
sandbox/: main.cc
sandbox/assets/: shader.glsl.frag  shader.glsl.vert
sandbox/include/: particle_system.hh  random.hh  sandbox_layer.hh
sandbox/src/: particle_system.cc  random.cc  sandbox.cc  sandbox_layer.cc
src/: main.cpp
